--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@chainsafe/bls": "^7.1.1",
+    "@chainsafe/blst": "^0.2.4",
     "@iden3/js-crypto": "^1.0.0-beta.1",
     "@noble/bls12-381": "^1.4.0",
     "ethereumjs-util": "^7.1.5"
